fix(reflect): added support reflect on firefox

--- a/src/components/AlbumCowerFlowSwiper/AlbumCowerFlowSwiper.module.scss
+++ b/src/components/AlbumCowerFlowSwiper/AlbumCowerFlowSwiper.module.scss
@@ -1,6 +1,7 @@
 .content-container {
     --header-height: 80px;
     --bottom-block-padding: 24px;
+    --reflect-margin: 8px;
 
     position: relative;
     height: 100dvh;
@@ -37,13 +38,6 @@
             background-size: cover;
             aspect-ratio: 1;
 
-            div {
-                width: 100%;
-                max-width: fit-content !important;
-                height: 100%;
-                border-radius: 0;
-            }
-
             .swiper-slide-shadow-coverflow {
                 z-index: 12;
                 min-width: 100%;
@@ -57,8 +51,6 @@
             height: 100%;
             object-fit: contain;
             border-radius: 0;
-            -webkit-box-reflect: below 8px
-                linear-gradient(transparent, rgb(0 0 0 / 85%), rgb(0 0 0 / 90%));
         }
 
         @include mobile {
@@ -117,6 +109,8 @@
 }
 
 .body {
+    max-width: 100vw;
     height: calc(100% - var(--header-height));
     padding: 0;
+    overflow-x: hidden;
 }
