--- a/src/components/AlbumFullScreenSwiper/AlbumFullScreenSwiper.module.scss
+++ b/src/components/AlbumFullScreenSwiper/AlbumFullScreenSwiper.module.scss
@@ -14,7 +14,10 @@
 
         .swiper-slide img {
             display: block;
+            width: auto;
             height: 100%;
+            margin-inline: auto;
+            object-fit: contain;
         }
 
         @include mobile {
@@ -39,4 +42,11 @@
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.image-container {
+    width: 100%;
+    height: 100%;
+
+    @include centered-flexbox;
 }
